// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notifications 2.1) Renders a empty notifications panel 1`] = `<span />`;

exports[`Notifications 3) Renders notices in the notifications panel 1`] = `
Array [
  <div
    className="k2 alert success"
  >
    <div
      className="inner"
    >
      <h4>
        TITLE
      </h4>
      <p>
        MESSAGE
      </p>
      <svg
        className="close"
        onClick={[Function]}
        viewBox="-25 -25 50 50"
      >
        <path
          d="M0 -4 l16 -16 l4 4 l-16 16 l16 16 l-4 4 l-16 -16 l-16 16 l-4 -4 l16 -16 l-16 -16 l4 -4 Z"
          fill="currentColor"
          stroke="currentColor"
        />
      </svg>
      <svg
        className="queuedCountdownTimer"
        viewBox="-50 -50 100 100"
      >
        <path
          d="M 0 -44 A 44 44 0 1 1 -7.105427357601002e-15 -44 L -7.105427357601002e-15 -36 A 36 36 0 1 0 0 -36 Z"
          fill="currentColor"
          stroke="currentColor"
        />
        <text
          dominantBaseline="central"
          fill="currentColor"
          fontSize="60px"
          stroke="currentColor"
          textAnchor="middle"
          x={0}
          y={0}
        >
          0
        </text>
      </svg>
    </div>
  </div>,
  <button
    onClick={[Function]}
  >
    Send
  </button>,
]
`;

exports[`Notifications 4) The notice type defaults to info 1`] = `
Array [
  <div
    className="k2 alert info"
  >
    <div
      className="inner"
    >
      <h4>
        TITLE
      </h4>
      <p>
        MESSAGE
      </p>
      <svg
        className="close"
        onClick={[Function]}
        viewBox="-25 -25 50 50"
      >
        <path
          d="M0 -4 l16 -16 l4 4 l-16 16 l16 16 l-4 4 l-16 -16 l-16 16 l-4 -4 l16 -16 l-16 -16 l4 -4 Z"
          fill="currentColor"
          stroke="currentColor"
        />
      </svg>
      <svg
        className="queuedCountdownTimer"
        viewBox="-50 -50 100 100"
      >
        <path
          d="M 0 -44 A 44 44 0 1 1 -7.105427357601002e-15 -44 L -7.105427357601002e-15 -36 A 36 36 0 1 0 0 -36 Z"
          fill="currentColor"
          stroke="currentColor"
        />
        <text
          dominantBaseline="central"
          fill="currentColor"
          fontSize="60px"
          stroke="currentColor"
          textAnchor="middle"
          x={0}
          y={0}
        >
          0
        </text>
      </svg>
    </div>
  </div>,
  <button
    onClick={[Function]}
  >
    Send
  </button>,
]
`;

exports[`Notifications 5) If the title is ommitted no title is rendered 1`] = `
Array [
  <div
    className="k2 alert info"
  >
    <div
      className="inner"
    >
      <p>
        MESSAGE
      </p>
      <svg
        className="close"
        onClick={[Function]}
        viewBox="-25 -25 50 50"
      >
        <path
          d="M0 -4 l16 -16 l4 4 l-16 16 l16 16 l-4 4 l-16 -16 l-16 16 l-4 -4 l16 -16 l-16 -16 l4 -4 Z"
          fill="currentColor"
          stroke="currentColor"
        />
      </svg>
      <svg
        className="queuedCountdownTimer"
        viewBox="-50 -50 100 100"
      >
        <path
          d="M 0 -44 A 44 44 0 1 1 -7.105427357601002e-15 -44 L -7.105427357601002e-15 -36 A 36 36 0 1 0 0 -36 Z"
          fill="currentColor"
          stroke="currentColor"
        />
        <text
          dominantBaseline="central"
          fill="currentColor"
          fontSize="60px"
          stroke="currentColor"
          textAnchor="middle"
          x={0}
          y={0}
        >
          0
        </text>
      </svg>
    </div>
  </div>,
  <button
    onClick={[Function]}
  >
    Send
  </button>,
]
`;

exports[`Notifications 6) If no message is given the default message is rendered 1`] = `
Array [
  <div
    className="k2 alert info"
  >
    <div
      className="inner"
    >
      <p>
        No message!
      </p>
      <svg
        className="close"
        onClick={[Function]}
        viewBox="-25 -25 50 50"
      >
        <path
          d="M0 -4 l16 -16 l4 4 l-16 16 l16 16 l-4 4 l-16 -16 l-16 16 l-4 -4 l16 -16 l-16 -16 l4 -4 Z"
          fill="currentColor"
          stroke="currentColor"
        />
      </svg>
      <svg
        className="queuedCountdownTimer"
        viewBox="-50 -50 100 100"
      >
        <path
          d="M 0 -44 A 44 44 0 1 1 -7.105427357601002e-15 -44 L -7.105427357601002e-15 -36 A 36 36 0 1 0 0 -36 Z"
          fill="currentColor"
          stroke="currentColor"
        />
        <text
          dominantBaseline="central"
          fill="currentColor"
          fontSize="60px"
          stroke="currentColor"
          textAnchor="middle"
          x={0}
          y={0}
        >
          0
        </text>
      </svg>
    </div>
  </div>,
  <button
    onClick={[Function]}
  >
    Send
  </button>,
]
`;

exports[`Notifications 7) Calling defaultTitleCase with a function changes how titles are formatted 1`] = `
Array [
  <div
    className="k2 alert success"
  >
    <div
      className="inner"
    >
      <h4>
        this-is-a-title
      </h4>
      <p>
        MESSAGE
      </p>
      <svg
        className="close"
        onClick={[Function]}
        viewBox="-25 -25 50 50"
      >
        <path
          d="M0 -4 l16 -16 l4 4 l-16 16 l16 16 l-4 4 l-16 -16 l-16 16 l-4 -4 l16 -16 l-16 -16 l4 -4 Z"
          fill="currentColor"
          stroke="currentColor"
        />
      </svg>
      <svg
        className="queuedCountdownTimer"
        viewBox="-50 -50 100 100"
      >
        <path
          d="M 0 -44 A 44 44 0 1 1 -7.105427357601002e-15 -44 L -7.105427357601002e-15 -36 A 36 36 0 1 0 0 -36 Z"
          fill="currentColor"
          stroke="currentColor"
        />
        <text
          dominantBaseline="central"
          fill="currentColor"
          fontSize="60px"
          stroke="currentColor"
          textAnchor="middle"
          x={0}
          y={0}
        >
          0
        </text>
      </svg>
    </div>
  </div>,
  <button
    onClick={[Function]}
  >
    Send
  </button>,
]
`;

exports[`Notifications 8) Calling defaultDigest with a function changes how notices are digested 1`] = `
Array [
  <div
    className="k2 alert success"
  >
    <div
      className="inner"
    >
      <h4>
        THIS IS A NEW TITLE
      </h4>
      <p>
        This is a message
      </p>
      <svg
        className="close"
        onClick={[Function]}
        viewBox="-25 -25 50 50"
      >
        <path
          d="M0 -4 l16 -16 l4 4 l-16 16 l16 16 l-4 4 l-16 -16 l-16 16 l-4 -4 l16 -16 l-16 -16 l4 -4 Z"
          fill="currentColor"
          stroke="currentColor"
        />
      </svg>
      <svg
        className="queuedCountdownTimer"
        viewBox="-50 -50 100 100"
      >
        <path
          d="M 0 -44 A 44 44 0 1 1 -7.105427357601002e-15 -44 L -7.105427357601002e-15 -36 A 36 36 0 1 0 0 -36 Z"
          fill="currentColor"
          stroke="currentColor"
        />
        <text
          dominantBaseline="central"
          fill="currentColor"
          fontSize="60px"
          stroke="currentColor"
          textAnchor="middle"
          x={0}
          y={0}
        >
          0
        </text>
      </svg>
    </div>
  </div>,
  <button
    onClick={[Function]}
  >
    Send
  </button>,
]
`;

exports[`Notifications 9) Calling defaultAlert with a JSX component changes how notices are rendered 1`] = `
Array [
  <div
    className="alert success"
  >
    <h4>
      This Is A Title
    </h4>
    <p>
      THIS IS A CUSTOM ALERT
    </p>
    <p>
      MESSAGE
    </p>
    <button
      onClick={[Function]}
    >
      Close
    </button>
  </div>,
  <button
    onClick={[Function]}
  >
    Send
  </button>,
]
`;

exports[`Notifications 10) Calling defaultMessage with a string sets the default message 1`] = `
Array [
  <div
    className="k2 alert success"
  >
    <div
      className="inner"
    >
      <h4>
        This Is A Title
      </h4>
      <p>
        CUSTOM DEFAULT MESSAGE
      </p>
      <svg
        className="close"
        onClick={[Function]}
        viewBox="-25 -25 50 50"
      >
        <path
          d="M0 -4 l16 -16 l4 4 l-16 16 l16 16 l-4 4 l-16 -16 l-16 16 l-4 -4 l16 -16 l-16 -16 l4 -4 Z"
          fill="currentColor"
          stroke="currentColor"
        />
      </svg>
      <svg
        className="queuedCountdownTimer"
        viewBox="-50 -50 100 100"
      >
        <path
          d="M 0 -44 A 44 44 0 1 1 -7.105427357601002e-15 -44 L -7.105427357601002e-15 -36 A 36 36 0 1 0 0 -36 Z"
          fill="currentColor"
          stroke="currentColor"
        />
        <text
          dominantBaseline="central"
          fill="currentColor"
          fontSize="60px"
          stroke="currentColor"
          textAnchor="middle"
          x={0}
          y={0}
        >
          0
        </text>
      </svg>
    </div>
  </div>,
  <button
    onClick={[Function]}
  >
    Send
  </button>,
]
`;

exports[`Notifications 11) Rendering the notifications panel with titleCase as a function changes how titles are formatted 1`] = `
Array [
  <div
    className="k2 alert success"
  >
    <div
      className="inner"
    >
      <h4>
        Thisisatitle
      </h4>
      <p>
        This is a message
      </p>
      <svg
        className="close"
        onClick={[Function]}
        viewBox="-25 -25 50 50"
      >
        <path
          d="M0 -4 l16 -16 l4 4 l-16 16 l16 16 l-4 4 l-16 -16 l-16 16 l-4 -4 l16 -16 l-16 -16 l4 -4 Z"
          fill="currentColor"
          stroke="currentColor"
        />
      </svg>
      <svg
        className="queuedCountdownTimer"
        viewBox="-50 -50 100 100"
      >
        <path
          d="M 0 -44 A 44 44 0 1 1 -7.105427357601002e-15 -44 L -7.105427357601002e-15 -36 A 36 36 0 1 0 0 -36 Z"
          fill="currentColor"
          stroke="currentColor"
        />
        <text
          dominantBaseline="central"
          fill="currentColor"
          fontSize="60px"
          stroke="currentColor"
          textAnchor="middle"
          x={0}
          y={0}
        >
          0
        </text>
      </svg>
    </div>
  </div>,
  <button
    onClick={[Function]}
  >
    Send
  </button>,
]
`;

exports[`Notifications 12) Rendering the notifications panel with digest as a function changes how notices are digested 1`] = `
Array [
  <div
    className="k2 alert success"
  >
    <div
      className="inner"
    >
      <h4>
        THIS IS A NEW TITLE
      </h4>
      <p>
        This is a message
      </p>
      <svg
        className="close"
        onClick={[Function]}
        viewBox="-25 -25 50 50"
      >
        <path
          d="M0 -4 l16 -16 l4 4 l-16 16 l16 16 l-4 4 l-16 -16 l-16 16 l-4 -4 l16 -16 l-16 -16 l4 -4 Z"
          fill="currentColor"
          stroke="currentColor"
        />
      </svg>
      <svg
        className="queuedCountdownTimer"
        viewBox="-50 -50 100 100"
      >
        <path
          d="M 0 -44 A 44 44 0 1 1 -7.105427357601002e-15 -44 L -7.105427357601002e-15 -36 A 36 36 0 1 0 0 -36 Z"
          fill="currentColor"
          stroke="currentColor"
        />
        <text
          dominantBaseline="central"
          fill="currentColor"
          fontSize="60px"
          stroke="currentColor"
          textAnchor="middle"
          x={0}
          y={0}
        >
          0
        </text>
      </svg>
    </div>
  </div>,
  <button
    onClick={[Function]}
  >
    Send
  </button>,
]
`;

exports[`Notifications 13) Rendering the notifications panel with alert as a JSX component changes how notices are rendered 1`] = `
Array [
  <div
    className="alert success"
  >
    <h4>
      This Is A Title
    </h4>
    <p>
      THIS IS A CUSTOM ALERT
    </p>
    <p>
      This is a message
    </p>
    <button
      onClick={[Function]}
    >
      Close
    </button>
  </div>,
  <button
    onClick={[Function]}
  >
    Send
  </button>,
]
`;

exports[`Notifications 14) Rendering the notifications panel with defaultMessage as string changes the default message 1`] = `
Array [
  <div
    className="k2 alert success"
  >
    <div
      className="inner"
    >
      <h4>
        This Is A Title
      </h4>
      <p>
        DEFAULT MESSAGE
      </p>
      <svg
        className="close"
        onClick={[Function]}
        viewBox="-25 -25 50 50"
      >
        <path
          d="M0 -4 l16 -16 l4 4 l-16 16 l16 16 l-4 4 l-16 -16 l-16 16 l-4 -4 l16 -16 l-16 -16 l4 -4 Z"
          fill="currentColor"
          stroke="currentColor"
        />
      </svg>
      <svg
        className="queuedCountdownTimer"
        viewBox="-50 -50 100 100"
      >
        <path
          d="M 0 -44 A 44 44 0 1 1 -7.105427357601002e-15 -44 L -7.105427357601002e-15 -36 A 36 36 0 1 0 0 -36 Z"
          fill="currentColor"
          stroke="currentColor"
        />
        <text
          dominantBaseline="central"
          fill="currentColor"
          fontSize="60px"
          stroke="currentColor"
          textAnchor="middle"
          x={0}
          y={0}
        >
          0
        </text>
      </svg>
    </div>
  </div>,
  <button
    onClick={[Function]}
  >
    Send
  </button>,
]
`;

exports[`Notifications 15) Setting timeout times out the alert 1`] = `
Array [
  <span />,
  <button
    onClick={[Function]}
  >
    Send
  </button>,
]
`;

exports[`Notifications 16) Clicking close button on the alert closes the alert 1`] = `
Array [
  <div
    className="k2 alert success"
  >
    <div
      className="inner"
    >
      <h4>
        TITLE
      </h4>
      <p>
        MESSAGE
      </p>
      <svg
        className="close"
        onClick={[Function]}
        viewBox="-25 -25 50 50"
      >
        <path
          d="M0 -4 l16 -16 l4 4 l-16 16 l16 16 l-4 4 l-16 -16 l-16 16 l-4 -4 l16 -16 l-16 -16 l4 -4 Z"
          fill="currentColor"
          stroke="currentColor"
        />
      </svg>
      <svg
        className="queuedCountdownTimer"
        viewBox="-50 -50 100 100"
      >
        <path
          d="M 0 -44 A 44 44 0 1 1 -7.105427357601002e-15 -44 L -7.105427357601002e-15 -36 A 36 36 0 1 0 0 -36 Z"
          fill="currentColor"
          stroke="currentColor"
        />
        <text
          dominantBaseline="central"
          fill="currentColor"
          fontSize="60px"
          stroke="currentColor"
          textAnchor="middle"
          x={0}
          y={0}
        >
          0
        </text>
      </svg>
    </div>
  </div>,
  <button
    onClick={[Function]}
  >
    Send
  </button>,
]
`;

exports[`Notifications 16) Clicking close button on the alert closes the alert 2`] = `
Array [
  <span />,
  <button
    onClick={[Function]}
  >
    Send
  </button>,
]
`;
